# ComputerVisionCourse

./: README.md  notes.txt
Ass2/A1_code/: A1  CMakeLists.txt  Makefile  ReadMe.txt  main.cpp
Ass2/A1_code_0/: Ass2  CMakeCache.txt  CMakeLists.txt  Makefile  ReadMe.txt  cmake_install.cmake  main copy 2.cpp  main copy 3.cpp  main copy.cpp  main.cpp
Ass2/sample/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  peopledetect.cpp  sample
Ass2/sample2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  multitracking.cpp
Ass2/sample3/: CMakeCache.txt  CMakeLists.txt  Makefile  Sample3  cmake_install.cmake  main.cpp
Ass2/vers0.0/: Ass2  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
Ass2/vers0.1/: Ass2  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  mylib.cpp  mylib.hpp
Ass2/vers1.0/: Ass2_v1  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
Ass2/vers2.0/: Ass2_v2  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
Ass2/vers3.0/: Ass2  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
BerlaCode/: ASSIGN_2  BG  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  main_BG.cpp
Lab_1/: CMakeCache.txt  Intro  Makefile  cmake_install.cmake  main.cpp
Lab_2/: CMakeCache.txt  FrameDifferencing  Makefile  cmake_install.cmake  main.cpp  main_bis.cpp  main_diff_N.cpp  main_diff_N_thresh.cpp  main_video.cpp
Lab_2_1/: AdaptiveBG  CMakeCache.txt  Makefile  bg.cpp  bg.h  cmake_install.cmake  main.cpp
Lab_2_2/: CMakeCache.txt  CMakeLists.txt  MOG  Makefile  cmake_install.cmake  main.cpp
Lab_4/HOG/: HOG  (+5 more)
hungarian-algorithm-cpp-master/: test  testMain.cpp
(+80 files in other folders)
