cmake_minimum_required(VERSION 2.8)
project(ASSIGN_2)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${PROJECT_SOURCE_DIR})
add_executable(ASSIGN_2 main.cpp)
add_executable(BG main_BG.cpp)
target_link_libraries(ASSIGN_2 ${OpenCV_LIBS})
target_link_libraries(BG ${OpenCV_LIBS})